k8s/ingress/clouddrop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clouddrop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /files
        backend:
          serviceName: files-svc
          servicePort: 8080
      - path: /user
        backend:
          serviceName: users-svc
          servicePort: 8080
