k8s/ingress/ingress-clouddrop.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-clouddrop
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: clouddrop.xyz
    http:
      paths:
      - path: /files
        backend:
          serviceName: files-svc
          servicePort: 8080
      - path: /user
        backend:
          serviceName: users-svc
          servicePort: 8080
