k8s/ingress/ingress-linkerd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd-ingress
  namespace: linkerd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:8084;
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: linkerd-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: dashboard.clouddrop.xyz
    http:
      paths:
      - backend:
          serviceName: linkerd-web
          servicePort: 8084
